cn/snowskystudio/newgame/test/error/FunctionError.py
from cn.snowskystudio.newgame.test.error.BaseError import BaseError


class FunctionError(BaseError):
    TYPE = "FunctionError"